# backend

./: .coveragerc  .gitignore  docker-compose.yml  pyproject.toml
src/company/application/: service.py
src/company/application/use_case/create_company/: exceptions.py  use_case.py
src/company/application/use_case/get_company_info/: use_case.py
src/company/application/use_case/list_company_by_user/: use_case.py
src/company/domain/: protocols.py  schema.py
src/company/presentation/: routes.py
src/core/domain/db/: schema.py
src/core/domain/storage/: protocols.py
src/core/infra/db/dummy/: repository.py
src/core/infra/db/mongodb/: client.py  repository.py
src/core/infra/storage/cloud_storage/: client.py
src/folder/application/: service.py
src/folder/application/use_cases/get_folder/: use_case.py
src/folder/application/use_cases/list_folders/: use_case.py
src/folder/application/use_cases/upload_folder/: use_case.py
src/folder/domain/: repository.py  schema.py
src/folder/domain/storage/: repository.py
src/folder/infra/storage/: repository.py
src/folder/presentation/: routes.py
src/presentation/api/: main.py
src/presentation/api/commons/: exception_handlers.py  response_model.py
src/presentation/api/di/: __init__.py  providers.py  stub.py
src/users/application/: service.py
src/users/application/use_cases/: exceptions.py
src/users/application/use_cases/login_user/: exceptions.py  use_case.py
src/users/domain/: schema.py
src/users/presentation/: routes.py
tests/unit/company/application/: test_service.py
(+13 files in other folders)
